Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.1.0
-
Fix Version/s: 5.2.0
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:MSVS10, Windows 7 SP1 x64
Qt Creator, Windows 7 SP1 x64
-
Commits:e39d629ebe9044b505ac35eaae3ab9c214d452a2
Description
When hiding header for QTreeWidget I get this:
QAccessibleTree::indexFromLogical: invalid index: 1 0 for QTreeWidget(0xf94748, name = "treeWidget")
Cannot creat accessible child interface for object: QTreeWidget(0xf94748, name = "treeWidget") index: 1
Attached the minimal app with the issue.(NOTE: delete untitled.pro.user in order to configure build paths for the app)
These two lines are enough to reproduce it:
ui->treeWidget->setHeaderHidden(true);
ui->treeWidget->addTopLevelItem(new QTreeWidgetItem((QTreeWidget*)NULL, QStringList() << "Hello bugs"));
Attachments
Issue Links
- relates to
-
QTBUG-83327 Unexpected console messages for selection changes in QTreeView
-
- Reported
-