src/widgets/itemviews/qtreeview.cpp
@@ -3912,9 +3912,8 @@ void QTreeView::currentChanged(const QModelIndex &current, const QModelIndex &pr
     }
 #ifndef QT_NO_ACCESSIBILITY
     if (QAccessible::isActive() && current.isValid()) {
-        int entry = (visualIndex(current) + (header()?1:0))*current.model()->columnCount()+current.column();
         QAccessibleEvent event(this, QAccessible::Focus);
-        event.setChild(entry);
+        event.setChild(accessibleTree2Index(current));
         QAccessible::updateAccessibility(&event);
     }
 #endif
@@ -3932,7 +3931,7 @@ void QTreeView::selectionChanged(const QItemSelection &selected,
         // ### does not work properly for selection ranges.
         QModelIndex sel = selected.indexes().value(0);
         if (sel.isValid()) {
-            int entry = (visualIndex(sel) + (header()?1:0))*sel.model()->columnCount()+sel.column();
+            int entry = accessibleTree2Index(sel);
             Q_ASSERT(entry >= 0);
             QAccessibleEvent event(this, QAccessible::Selection);
             event.setChild(entry);
@@ -3940,7 +3939,7 @@ void QTreeView::selectionChanged(const QItemSelection &selected,
         }
         QModelIndex desel = deselected.indexes().value(0);
         if (desel.isValid()) {
-            int entry = (visualIndex(desel) + (header()?1:0))*desel.model()->columnCount()+desel.column();
+            int entry = accessibleTree2Index(desel);
             Q_ASSERT(entry >= 0);
             QAccessibleEvent event(this, QAccessible::SelectionRemove);
             event.setChild(entry);
@@ -3956,6 +3955,13 @@ int QTreeView::visualIndex(const QModelIndex &index) const
     d->executePostedLayout();
     return d->viewIndex(index);
 }
+
+int QTreeView::accessibleTree2Index(const QModelIndex &index) const
+{
+    // Note that this will include the header, even if its hidden.
+    return (visualIndex(index) + (header() ? 1 : 0)) * index.model()->columnCount() + index.column();
+}
+
 
 QT_END_NAMESPACE
 
